# mov-to-txt

./: .gitignore  PIPELINE_SPEC.md  README.md  config.py  convert.py  pyproject.toml
