[project]
name = "mov-to-txt"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.84.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy",
    "torch>=2.5.0",
    "transformers>=4.50.0",
    "accelerate",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
